2020-02-16  John Darrington <john@darrington.wattle.id.au>

	* src/pk-def.c: Explicitly set completer member of struct pk_cmd
	typed variables to NULL.
        * src/pk-help.c: ditto
        * src/pk-ios.c:  ditto
        * src/pk-misc.c: ditto
        * src/pk-set.c:  ditto
        * src/pk-vm.c:   ditto

2020-02-19  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.c (pkl_gen_pr_try_until_stmt): Emit sync instruction
	before jumping back.

2020-02-18  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-promo.c (pkl_promo_ps_op_mul): Support multiplication of
	an integer by string.
	* src/pkl-typify.c (pkl_typify1_ps_mul): Likewise.
	* src/pkl-gen.c (pkl_gen_ps_op_mul): Likewise.
	* src/pkl-fold.c (OP_BINARY_SIS): Define.
	(EMUL_SIS): Likewise.
	(pkl_fold_mul): Use OP_BINARY_SIS.
	* src/pkl-insn.def (PKL_INSN_MULS): Define.
	* src/pvm.jitter (muls): New instruction.
	* testsuite/poke.pkl/mul-strings-1.pk: New test.
	* testsuite/poke.pkl/mul-strings-2.pk: Likewise.
	* testsuite/poke.pkl/mul-strings-3.pk: Likewise.
	* testsuite/poke.pkl/mul-strings-4.pk: Likewise.
	* testsuite/poke.pkl/mul-strings-5.pk: Likewise.
	* doc/poke.texi (String Concatenation): Document the * operator
	for strings.

2020-02-18  Carlo Caione  <ccaione@baylibre.com>

	* .gitignore: ignore more files
	* .gitmodules: ignore dirty sub-repo

2020-02-18  Carlo Caione  <ccaione@baylibre.com>

	* src/pk-repl.c: Rework poke_sigint_handler()

2020-02-17  Carlo Caione  <ccaione@baylibre.com>

	* src/pk-repl.c (pkl_complete_struct): new auto-complete function
	* src/pkl-ast.c (pkl_struct_type_traverse): new helper function
	* src/pkl-ast.h: likewise

2020-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.cmd/set-oacutoff-2.pk: New test.
	* src/pvm-val.c (pvm_print_val): Apply acutoff also in arrays that
	are not inside other structs.

2020-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-set.c (pk_cmd_set_endian): Fix handling of optional
	argument.
	(pk_cmd_set_nenc): Likewise.